[FE,BE] Show Total Trip Monthly By Year Line Chart
