# myride/app/Models/TripModel.php
@@ -154,13 +154,17 @@ class TripModel extends Model
         return $total_distance;
     }
 
-    public static function getTotalTripByVehiclePerYear($user_id,$vehicle_id,$year = null){
+    public static function getTotalTripByVehiclePerYear($user_id, $vehicle_id = null, $year = null){
         if($year == null){
             $year = date('Y');
         }
-        $res = TripModel::selectRaw("COUNT(DISTINCT trip.id) as total, MONTH(trip.created_at) as context")
-            ->where('vehicle_id',$vehicle_id)
-            ->where('created_by',$user_id)
+        $res = TripModel::selectRaw("COUNT(DISTINCT trip.id) as total, MONTH(trip.created_at) as context");
+
+        if($vehicle_id){
+            $res = $res->where('vehicle_id',$vehicle_id);
+        }
+
+        $res = $res->where('created_by',$user_id)
             ->whereRaw("YEAR(trip.created_at) = '$year'")
             ->groupByRaw('MONTH(trip.created_at)')
             ->get();
